--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -461,48 +461,42 @@ Hope that you are excited as I am in all these cool features that are coming up 
 
 // tag::financialtracker[]
 === Financial Tracker
-The Financial Tracker feature in TravEzy allows users to keep track of their financial expenses with appropriate categorized expenditure by different countries.
+The _Financial Tracker_ feature in _TravEzy_ allows users to keep track of their financial expenses with appropriate categorized expenditure by different countries.
 
 *Architecture:*
 
-The Architecture Diagram given below explains the high-level design of the financial tracker feature.
+The Architecture Diagram given below explains the high-level design of the _Financial Tracker_ feature.
 
-.Architecture Diagram of the Financial Tracker feature
-image::FinancialTrackerDiagram.png[]
-
+image::FinancialTrackerDiagram.png[width=600]
 
 Inputs given by the user are channeled from the `textUI` and handled by `Logic` before different commands are formed which execute on
-the `Model` and updates the `FinancialTracker` object which contains the expense list.
+the `Model`. The `Model` will then update the `FinancialTracker` object which contains the expense list.
 
-The `textUI` and `Log Centre` stem from the common package of the main TravEzy application while ``Logic``, ``Model,`` and ``Storage`` all have similar architecture design with the other features (Calendar, Itinerary, etc.).
+The `textUI` and `Log Centre` stem from the common package of the main _TravEzy_ application while ``Logic``, ``Model,`` and ``Storage`` all have similar architecture design with the other features (Calendar, Itinerary, etc.).
 
 *Financial Tracker Class Diagram:*
 
-.Class Diagram of the Financial Tracker feature
-image::FinancialTrackerClassDiagram.png[]
+image::FinancialTrackerClassDiagram.png[width=800]
 The `Model` stores the `FinancialTracker` data which includes several `ExpenseList` each associated with a country that keeps track of all the expenses.
 
 ``Financial Tracker`` exposes an unmodifiable `ObservableMap<String, ExpenseList>` that can be observed. The UI is bound to the `Model` whereby the `Model` returns an expense list associated with the current ``Country`` of the `Financial Tracker` and updates when the querying `Country` changed.
 
 [NOTE]
-Each time a new `Country` is selected from the Countries dropdown box, the respective expense list will be returned for that specific country, this implementation is to ease categorising and sorting.
+Each time a new `Country` is selected from the _Countries dropdown box_, the respective expense list will be returned for that specific country, this implementation is to ease categorising and sorting.
 
 *Sequence Diagram example:*
 
 The sequence diagram below shows the sequence of events that will take place when a user calls `Summary` command.
 
-.Sequence Diagram of the Financial Tracker feature
-image::FinancialTrackerSummaryCommandDiagram.png[]
+image::FinancialTrackerSummaryCommandDiagram.png[width=800]
 
-
-The sequence of events are very likely to those of the other commands in Financial Tracker feature.
+The sequence of events are very likely to those of the other commands in _Financial Tracker_ feature.
 
 *Activity Diagram example:*
 
 The activity diagram below shows how `edits` command works.
 
-.Activity Diagram of the Financial Tracker feature
-image::FinancialTrackerActivityDiagram.png[]
+image::FinancialTrackerActivityDiagram.png[width=800]
 
 
 
