--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -444,7 +444,7 @@ a set number (e.g. 500) of transactions.
 ==== Design Considerations
 // end::project[]
 
-=== Display Feature `display`
+=== Display Feature: `display`
 This feature provides a graphical view of an existing projection to the _user_. +
 
 ==== Current Implementation
@@ -536,7 +536,7 @@ image::DeleteActivityDiagram.png[]
 // end::delete[]
 
 // tag::update[]
-=== Update: `update`
+=== Update Existing Entry Feature: `update`
 
 This feature allows users to update `Transaction`, `Budget` or `Projection` entries. The user is unable to perform this feature on `Ledger` and operations the rationale will be further explained in **Aspect 2**.
 
@@ -998,7 +998,6 @@ Close the window.
 .. Re-launch the app by double-clicking the jar file. +
    Expected: The most recent window size and location is retained.
 
-_{ more test cases ... }_
 
 === Deleting a Person
 
@@ -1017,7 +1016,6 @@ Status bar remains the same.
 .. Other incorrect delete commands to try: `delete`, `delete x` (where x is larger than the list size) _{give more}_ +
    Expected: Similar to previous.
 
-_{ more test cases ... }_
 
 === Saving Data
 
@@ -1025,4 +1023,3 @@ _{ more test cases ... }_
 
 .. _{explain how to simulate a missing/corrupted file and the expected behavior}_
 
-_{ more test cases ... }_
