--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -1619,11 +1619,14 @@ of the actual percentage.
 *Q:* Who can I contact should there be a bug or feedback that I would like to share? +
 *A:* Feel free to send an email to the developer team: mailto:thetravellerdiary@gmail.com[thetravellerdiary@gmail.com] and we will access to your queries within three working days. We also value your feedback and will use it to improve TravEzy. Thank you and we looking forward to serving you better!
 
-*Q:* Is it advisable to edit the storage files in _TravEzy_ so that the changes will be reflected when I start the application? +
+*Q:* Is it advisable to edit the storage files in _TravEzy_ so that the changes will also be reflected when I start the application? +
 *A:* _TravEzy_ gives you a caveat and strongly advise against tempering with the storage files in _TravEzy_ as this could result in falsification of the data.
 
-*Q:* Why are there data which I did not included when I first startup _TravEzy_?
+*Q:* Why are there data which I did not included when I first startup _TravEzy_? +
 *A:* Being a new user, _TravEzy_ will provide you with some sample data to experiment first before you start using _TravEzy_ proper. Hope that you will enjoy using _TravEzy_.
+
+*Q:* I'm seemed to be having a bug whereby when given multiple similar prefixes, _TravEzy_ will still accept the input but only takes in the second prefix argument. Is this suppose to work as expected? +
+*A:* Yes, _TravEzy_ allows users to implement multiple similar prefixes for some commands so it reduce the trouble to delete the previous prefix argument in order to add in a new one.
 
 *Q:* What are some of the cool features that are available in TravEzy currently? +
 *A:* TravEzy currently boast a plethora of features such as calendar, itinerary, address book, travelling diary, financial tracker and achievements page. All these features work in tandem with each other to give you the best and only the best travelling experience. Not only that, the TravEzy team also decided to spice things up and included some easter eggs scattered throughout the
