--- a/docs/team/jun-ha0.adoc
+++ b/docs/team/jun-ha0.adoc
@@ -74,7 +74,7 @@ advantage of keeping users incentivized and motivated to improve their skills.
 
 ** [red]#*_Highlights:_* -#
 *** In-depth analysis of design alternatives was necessary to prevent users from creating multiple game instances.
-The implementation was also challenging because there were various JavaFX API like javafx.animation and javafx.scene.
+The implementation was also challenging because there were various JavaFX API like `javafx.animation` and `javafx.beans`.
 
 === Minor enhancement: added `find` command
 ** [red]#*_What it does:_* -# Case-insensitive search for engagements based on the given keyword.
@@ -97,9 +97,9 @@ displays the issue trackers I managed.
 
 ==== Community
 *** [teal]#*PR Reviews:*#
-**** The following links: https://github.com/AY1920S1-CS2103T-F14-3/main/pulls?utf8=%E2%9C%93&q=is%3Apr+reviewed-by%3Ajun-ha0+is%3Aclosed+[Typee PR]
+**** The following links https://github.com/AY1920S1-CS2103T-F14-3/main/pulls?utf8=%E2%9C%93&q=is%3Apr+reviewed-by%3Ajun-ha0+is%3Aclosed+[Typee PR]
 https://github.com/nus-cs2103-AY1920S1/addressbook-level3/pull/11[MoneyGoWhere PR]
-displays the Pull Requests I reviewed.
+display the Pull Requests I reviewed.
 
 === Code contributed
 
