fixed minor errors

--- a/docs/team/sheryltay28.adoc
+++ b/docs/team/sheryltay28.adoc
@@ -47,5 +47,5 @@ include::../UserGuide.adoc[tag=lessons]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=]
+include::../DeveloperGuide.adoc[tag=model]
 
