Touch up autocomplete and UserGuide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -216,13 +216,13 @@ Upon typing any letters that resemble commands, a popup menu will appear as show
 image::autocorrect/autocomplete2.jpg[auto,500,480,pdfwidth=50%,scaledwidth=50%]
 
 The user can then choose the first option of the menu using CTRL, use SHIFT + UP and SHIFT + DOWN to cycle through menu options, +
-or use ESC to close the pop window. If the popup menu is closed, no autocomplete features will be available. +
+or use ESC to turn the autocomplete feature off. CTRL can be used to turn the feature back on. +
 
 Usage:
 
 `SHIFT + Arrow DOWN` and `SHIFT + Arrow UP` Keys to toggle between autocomplete options +
-`CTRL` Key to choose the first autocomplete suggestions +
-`ESC` Key to close the autocomplete suggestions +
+`CTRL` Key to choose the first autocomplete suggestion, or turn AutoComplete on if it's off. +
+`ESC` Key to close the autocomplete suggestions and turn off AutoComplete. +
 
 ==== History
 
